# ESP32-BitcoinMiner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.h
app_desktop/: main.c
app_esp32/: CMakeLists.txt  sdkconfig.defaults
app_esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c  selftest.c  wifi.c  wifi.h
core/: coinbase.c  coinbase.h  difficulty.c  difficulty.h  header.c  header.h  merkle.c  merkle.h  sha256_compress.c  sha256_compress.h  sha256_compress_xtensa.S  sha256_fast.c  sha256_fast.h  sha256_ref.c  sha256_ref.h  stratum_proto.c  stratum_proto.h  target.c  target.h
platform/: net_posix.c  net_posix.h
test/: test_coinbase.c  test_difficulty.c  test_header.c  test_merkle.c  test_sha256.c  test_sha256_fast.c  test_stratum_proto.c  test_target.c  test_util.h
